--- a/photo.html
+++ b/photo.html
@@ -18,21 +18,21 @@
       <div class="row mt-5">
         <div class="col-sm-4">
           <img
-            src="images/crois4.jpeg"
+            src="/images/crois4.jpeg"
             alt=""
             class="img-fluid rounded shadow"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="images/crois2.jpeg"
+            src="/images/crois2.jpeg"
             alt=""
             class="img-fluid rounded shadow"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="images/crois3.jpeg"
+            src="/images/crois3.jpeg"
             alt=""
             class="img-fluid rounded shadow"
           />
@@ -41,7 +41,7 @@
     </div>
     <div class="d-block text-center p-3">
       <a href="/" class="p-4">Home</a>
-      <a href="contact.html" class="p-4">Contact</a>
+      <a href="/contact.html" class="p-4">Contact</a>
     </div>
   </body>
 </html>
