--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <div class="text-center mt-5">
       <h1>Contact me</h1>
       <h3>Klymenko Nina</h3>
-      <h4>📩 klymenkon2602@gmail.com</h4>
+      <h4>📩 ilovecroissant@gmail.com</h4>
     </div>
 
     <div class="d-block text-center p-3">
