--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Source+Serif+Pro:ital@1&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,30 +20,35 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <img
-      src="/images/crois5.jpeg"
-      alt=""
-      class="img-fluid d-block mx-auto rounded"
-    />
-    <div class="container">
-      <div class="row">
-        <div class="col-3"></div>
-        <div class="col-6">
-          <p class="py-4 mx-4 text-center">
-            Comment le croissant arrivé en France ? Comment est-il donc arrivé
-            en France ? On dit que ce serait Marie-Antoinette d'Autriche, épouse
-            du roi Louis XVI et originaire de Vienne, qui aurait introduit cette
-            viennoiserie à Paris en 1770. Au début, le croissant était une sorte
-            de pâte à pain. Mais au fil des années, la recette s'est modifiée et
-            améliorée.
-          </p>
+    <div class="mask">
+      <img
+        src="/images/crois5.jpeg"
+        alt=""
+        class="img-fluid d-block mx-auto rounded main-img"
+      />
+      <div class="container">
+        <div class="row">
+          <div class="col-3"></div>
+          <div class="col-6">
+            <p class="mx-4 text-center main-page-text">
+              <strong> Comment le croissant arrivé en France ?</strong>
+              <br />
+              <br />
+              Comment est-il donc arrivé en France ? On dit que ce serait
+              Marie-Antoinette d'Autriche, épouse du roi Louis XVI et originaire
+              de Vienne, qui aurait introduit cette viennoiserie à Paris en
+              1770. Au début, le croissant était une sorte de pâte à pain. Mais
+              au fil des années, la recette s'est modifiée et améliorée.
+            </p>
+          </div>
+          <div class="col-3"></div>
         </div>
-        <div class="col-3"></div>
       </div>
-    </div>
-    <div class="d-block text-center pb-4">
-      <a href="/photo.html" class="px-3">Photo</a>
-      <a href="/contact.html" class="px-3">Contact</a>
+      <div class="d-block text-center pb-5">
+        <a href="/" class="p-4">Home</a>
+        <a href="/photo.html" class="px-3">Photo</a>
+        <a href="/contact.html" class="px-3">Contact</a>
+      </div>
     </div>
   </body>
 </html>
