add a little styling

--- a/photo.html
+++ b/photo.html
@@ -14,8 +14,11 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
+    <h1 class="text-center pt-5 photo-page-text">
+      Quel croissant préférez-vous ?
+    </h1>
     <div class="container">
-      <div class="row mt-5">
+      <div class="row">
         <div class="col-sm-4">
           <img
             src="/images/crois4.jpeg"
