--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <div class="text-center mt-5">
+    <div class="text-center mt-5 contact-text">
       <h1>Contact me</h1>
       <h3>Klymenko Nina</h3>
       <h4>📩 ilovecroissant@gmail.com</h4>
