--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="Make an order - croissant.com" />
+    <title>Contact with - croissant.com</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,8 +22,8 @@
     </div>
 
     <div class="d-block text-center p-3">
-      <a href="/" class="p-4">Home</a>
-      <a href="/photo.html" class="p-4">Photo</a>
+      <a href="/" class="p-4">Home Page</a>
+      <a href="/photo.html" class="px-3">Exelent photo of croissant</a>
     </div>
   </body>
 </html>
