--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="Inreresting stories about croissant" />
+    <title>History of croissant - croissant.com</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -30,10 +31,8 @@
         <div class="row">
           <div class="col-3"></div>
           <div class="col-6">
+            <h1 class="mainTitle">Comment le croissant arrivé en France ?</h1>
             <p class="mx-4 text-center main-page-text">
-              <strong> Comment le croissant arrivé en France ?</strong>
-              <br />
-              <br />
               Comment est-il donc arrivé en France ? On dit que ce serait
               Marie-Antoinette d'Autriche, épouse du roi Louis XVI et originaire
               de Vienne, qui aurait introduit cette viennoiserie à Paris en
@@ -45,8 +44,8 @@
         </div>
       </div>
       <div class="d-block text-center pb-5">
-        <a href="/" class="p-4">Home</a>
-        <a href="/photo.html" class="px-3">Photo</a>
+        <a href="/" class="p-4">Home Page</a>
+        <a href="/photo.html" class="px-3">Exelent photo of croissant</a>
         <a href="/contact.html" class="px-3">Contact</a>
       </div>
     </div>
