--- a/photo.html
+++ b/photo.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Here you can find good photo of croissant"
+    />
+    <title>Photo of - croissant.com</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -43,7 +47,7 @@
       </div>
     </div>
     <div class="d-block text-center p-3">
-      <a href="/" class="p-4">Home</a>
+      <a href="/" class="p-4">Home Page</a>
       <a href="/contact.html" class="p-4">Contact</a>
     </div>
   </body>
