--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Inreresting stories about croissant" />
-    <title>History of croissant - croissant.com</title>
+    <meta name="description" content="Interesting stories about croissant" />
+    <title>History of croissant - Croissan.com</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,7 +24,7 @@
     <div class="mask">
       <img
         src="/images/crois5.jpeg"
-        alt=""
+        alt="Croissant logo"
         class="img-fluid d-block mx-auto rounded main-img"
       />
       <div class="container">
