--- a/photo.html
+++ b/photo.html
@@ -8,7 +8,7 @@
       name="description"
       content="Here you can find good photo of croissant"
     />
-    <title>Photo of - croissant.com</title>
+    <title>Photo of - Croissan.com</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,21 +26,21 @@
         <div class="col-sm-4">
           <img
             src="/images/crois4.jpeg"
-            alt=""
+            alt="croissant cafe"
             class="img-fluid rounded shadow"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="/images/crois2.jpeg"
-            alt=""
+            alt="croissant emmental"
             class="img-fluid rounded shadow"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="/images/crois3.jpeg"
-            alt=""
+            alt="croissant breakfast"
             class="img-fluid rounded shadow"
           />
         </div>
