--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
           <div class="col-3"></div>
           <div class="col-6">
             <h1 class="mainTitle">Comment le croissant arrivé en France ?</h1>
-            <p class="mx-4 text-center main-page-text">
+            <h2 class="mx-4 text-center main-page-text">
               Comment est-il donc arrivé en France ? On dit que ce serait
               Marie-Antoinette d'Autriche, épouse du roi Louis XVI et originaire
               de Vienne, qui aurait introduit cette viennoiserie à Paris en
               1770. Au début, le croissant était une sorte de pâte à pain. Mais
               au fil des années, la recette s'est modifiée et améliorée.
-            </p>
+            </h2>
           </div>
           <div class="col-3"></div>
         </div>
