add title to link

--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,11 @@
       <h4>📩 ilovecroissant@gmail.com</h4>
     </div>
 
-    <div class="d-block text-center p-3">
-      <a href="/" class="p-4">Home Page</a>
-      <a href="/photo.html" class="px-3">Exelent photo of croissant</a>
-    </div>
+    <footer class="d-block text-center p-3">
+      <a href="/" title="Home" class="p-4">Home Page</a>
+      <a href="/photo.html" title="Croissant photo" class="px-3"
+        >Exelent photo of croissant</a
+      >
+    </footer>
   </body>
 </html>
