--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
           <div class="col-3"></div>
         </div>
       </div>
-      <div class="d-block text-center pb-5">
-        <a href="/" class="p-4">Home Page</a>
-        <a href="/photo.html" class="px-3">Exelent photo of croissant</a>
-        <a href="/contact.html" class="px-3">Contact</a>
-      </div>
+      <footer class="d-block text-center pb-5">
+        <a href="/" title="Home" class="p-4">Home Page</a>
+        <a href="/photo.html" title="Croissant photo" class="px-3"
+          >Exelent photo of croissant</a
+        >
+        <a href="/contact.html" title="Contact" class="px-3">Contact</a>
+      </footer>
     </div>
   </body>
 </html>
