--- a/photo.html
+++ b/photo.html
@@ -46,9 +46,9 @@
         </div>
       </div>
     </div>
-    <div class="d-block text-center p-3">
-      <a href="/" class="p-4">Home Page</a>
-      <a href="/contact.html" class="p-4">Contact</a>
-    </div>
+    <footer class="d-block text-center p-3">
+      <a href="/" title="Home" class="p-4">Home Page</a>
+      <a href="/contact.html" title="Contact" class="px-3">Contact</a>
+    </footer>
   </body>
 </html>
